--- a/week4 assignment 2/img/CSS/style.css
+++ b/week4 assignment 2/img/CSS/style.css
@@ -4,6 +4,7 @@ background-color: #f8f8f8;
     height: auto;
     width: 100%;
 }
+/*headings*/
 h1,h2,h3,h4,h5,h6{
 font-family:"poppins",sans-serif;
 }
